kubernetes/apps/database/postgres/app/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ${APP}-internal
  annotations:
    external-dns.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    external-dns.kubernetes.io/hostname: postgres.${CLUSTER_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: postgres
  rules:
    - backendRefs:
        - name: postgres-rw
          port: 5432
